# name: test_add_workflow_flow[task-slug-"task-slug"|task-"task-slug"|task-True]
  dict({
    'addWorkflowFlow': dict({
      'clientMutationId': None,
      'workflow': dict({
        'flows': dict({
          'edges': list([
            dict({
              'node': dict({
                'createdByGroup': 'admin',
                'createdByUser': 'admin',
                'next': '"task-slug"|task',
                'tasks': list([
                  dict({
                    'slug': 'task-slug',
                  }),
                ]),
              }),
            }),
          ]),
          'totalCount': 1,
        }),
        'tasks': list([
          dict({
            'slug': 'season-fish-share',
          }),
          dict({
            'slug': 'song-light',
          }),
          dict({
            'slug': 'task-slug',
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_add_workflow_flow[task-slug-"task-slug"|task-None-True]
  dict({
    'addWorkflowFlow': dict({
      'clientMutationId': None,
      'workflow': dict({
        'flows': dict({
          'edges': list([
            dict({
              'node': dict({
                'createdByGroup': 'admin',
                'createdByUser': 'admin',
                'next': '"task-slug"|task',
                'tasks': list([
                  dict({
                    'slug': 'task-slug',
                  }),
                ]),
              }),
            }),
          ]),
          'totalCount': 1,
        }),
        'tasks': list([
          dict({
            'slug': 'season-fish-share',
          }),
          dict({
            'slug': 'song-light',
          }),
          dict({
            'slug': 'task-slug',
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_add_workflow_flow[task-slug-[]|tasks-"task-slug"|task-True]
  dict({
    'addWorkflowFlow': dict({
      'clientMutationId': None,
      'workflow': dict({
        'flows': dict({
          'edges': list([
            dict({
              'node': dict({
                'createdByGroup': 'admin',
                'createdByUser': 'admin',
                'next': '[]|tasks',
                'tasks': list([
                  dict({
                    'slug': 'task-slug',
                  }),
                ]),
              }),
            }),
          ]),
          'totalCount': 1,
        }),
        'tasks': list([
          dict({
            'slug': 'season-fish-share',
          }),
          dict({
            'slug': 'song-light',
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_query_all_workflows
  dict({
    'allWorkflows': dict({
      'edges': list([
        dict({
          'node': dict({
            'allowAllForms': False,
            'allowForms': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'slug': 'suggest-adult-allow',
                  }),
                }),
              ]),
            }),
            'description': '''
              Station story first. Team suggest traditional boy above. Argue move appear catch toward help wind.
              Kid avoid player relationship to range whose. Draw free property consider.
            ''',
            'flows': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'next': 'life-just-live',
                    'tasks': list([
                      dict({
                        'slug': 'team-start-worker',
                      }),
                    ]),
                  }),
                }),
              ]),
              'totalCount': 1,
            }),
            'meta': dict({
            }),
            'name': 'Bonnie Moreno',
            'slug': 'environmental-ten',
            'startTasks': list([
              dict({
                'slug': 'team-start-worker',
              }),
            ]),
            'tasks': list([
              dict({
                'slug': 'team-start-worker',
              }),
            ]),
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_save_workflow
  dict({
    'saveWorkflow': dict({
      'clientMutationId': 'testid',
      'workflow': dict({
        'allowAllForms': False,
        'allowForms': dict({
          'edges': list([
            dict({
              'node': dict({
                'slug': 'suggest-adult-allow',
              }),
            }),
          ]),
          'totalCount': 1,
        }),
        'meta': dict({
        }),
        'name': 'Bonnie Moreno',
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
